QFuture: allow implicit conversion from QFuture<T> to QFuture<void>

This is a form of type erasure and therefore should be implicit: a
function `f(QFuture<void>)` should be callable as `f(future)` for any
`QFuture<T> future`. Drop the `explicit`. This is also in line with the
existing converting assignment operator.

Pick-to: 6.9 6.8
Fixes: QTBUG-139790
Change-Id: Ib63edf197285cce2c95a28b0308ddc7256e4af2b
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit 0f20882c48f439d9cb4fa9d6b6bc310176e8d3b8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>